--- a/style.css
+++ b/style.css
@@ -1694,3 +1694,19 @@ color: var(--secondary-color);
   height: 100%;
   aspect-ratio: auto;
 }
+
+
+.mode-icon-lumiere {
+    opacity: 0;
+    visibility: hidden;
+}
+
+body.mode-scene-lumiere .mode-icon-ombre {
+    opacity: 0; 
+    visibility: hidden;
+}
+
+body.mode-scene-lumiere .mode-icon-lumiere {
+    opacity: 1;
+    visibility: visible;
+}
