--- a/style.css
+++ b/style.css
@@ -22,6 +22,16 @@ body.mode-scene-lumiere {
     --header-text-color: var(--primary-color);
 }
 
+body.mode-scene-lumiere .mode-icon-ombre {
+    opacity: 0;
+    visibility: hidden;
+}
+
+body.mode-scene-lumiere .mode-icon-lumiere {
+    opacity: 1;
+    visibility: visible;
+}
+
 .style-switcher {
     position: fixed;
     top: 50%;
